<resources>
    <string name="app_name">Shopii</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shopii - Buy any where</string>
    <string name="nav_header_subtitle">shopii.help@shopii.com.vn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_merchant">Kênh người bán</string>
    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Shopii Notification Channel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="not_receive_info">"Không nhận được thông tin"</string>
    <string name="not_receive_info_err">"Không gởi được yêu cầu vui lòng kiểm tra lại"</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_login">Login</string>
    <string name="menu_registration">Sign up</string>
    <string name="menu_order">Order</string>

    <string name="menu_category">Category</string>
    <string name="menu_cart">My Cart</string>
    <string name="menu_myorder">My Order</string>
    <string name="menu_newproduct">New Product</string>
    <string name="menu_search">Search</string>
    <string name="menu_myproduct">My Products</string>
    <string name="menu_ordermanager">Order Manager</string>
    <string name="menu_notification">Notification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="navigation_open">Open Navigation</string>
    <string name="navigation_close">Close Navigation</string>
    <string name="payment_through_momo">"Thanh toán"</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="signUp">Sign Up</string>
    <string name="nameHint">Name</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="signUpSubtitle">Already have an account?</string>
    <string name="signInSubtitle">Don\'t have an account?</string>
    <string name="signIn">Sign In</string>
    <string name="searchHint">Product name, shop name, ...</string>
    <string name="categoryListTitle">Popular Categories</string>
    <string name="categoryName">Category Name</string>
    <string name="title_activity_show_product_category">ShowProductCategory</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--    spinner-->
    <string-array name="category">
        <item>"Máy tính &amp; Laptop"</item>
        <item>"Áo thun dành cho nam siêu đẹp"</item>
        <item>"Thể thao &amp; Du lịch"</item>
        <item>"Thời trang nữ"</item>
        <item>"Ô tô &amp; Xe máy &amp; Xe đạp"</item>
        <item>"Sách"</item>
        <item>"Sức khoẻ"</item>
        <item>"Nhà cửa &amp; Đời sống"</item>
        <item>"Sắc đẹp"</item>
        <item>"Đồ điện tử"</item>
    </string-array>
</resources>